[gd_scene load_steps=27 format=3 uid="uid://cadhc63l4phn7"]

[ext_resource type="Script" path="res://input.gd" id="1_cdgn3"]
[ext_resource type="Script" path="res://button_scripts/button_0.gd" id="1_totml"]
[ext_resource type="Theme" uid="uid://dijyvgyshdkqj" path="res://fontsize40.tres" id="1_xbuye"]
[ext_resource type="Script" path="res://button_scripts/clear.gd" id="2_ltflc"]
[ext_resource type="Script" path="res://button_scripts/delete.gd" id="3_1veor"]
[ext_resource type="Script" path="res://button_scripts/move_left.gd" id="3_1343i"]
[ext_resource type="Texture2D" uid="uid://bgk42bvlenvkf" path="res://assets/pan-start-symbolic.svg" id="3_rf4oa"]
[ext_resource type="Script" path="res://button_scripts/move_right.gd" id="4_mgs5p"]
[ext_resource type="Script" path="res://button_scripts/enter.gd" id="4_qdnla"]
[ext_resource type="Script" path="res://button_scripts/answer.gd" id="4_t5poh"]
[ext_resource type="Texture2D" uid="uid://b2tynr2ibjxde" path="res://assets/pan-end-symbolic.svg" id="5_45h5p"]
[ext_resource type="Script" path="res://button_scripts/parenthesis.gd" id="7_ivjdx"]
[ext_resource type="Texture2D" uid="uid://v7o6h3f5uawn" path="res://assets/edit-clear-symbolic.svg" id="7_t6dja"]
[ext_resource type="Script" path="res://button_scripts/exponent.gd" id="10_855gx"]
[ext_resource type="Script" path="res://button_scripts/name_then_parenthesis.gd" id="12_nag7n"]
[ext_resource type="Script" path="res://button_scripts/2_param_parenthesis.gd" id="13_utar4"]
[ext_resource type="Theme" uid="uid://ct6wbh7pmtv76" path="res://popup_fontsize.tres" id="15_6v4ak"]
[ext_resource type="Script" path="res://button_scripts/insert_function_shortcut.gd" id="15_a7ulm"]
[ext_resource type="Script" path="res://button_scripts/units.gd" id="15_hi52x"]
[ext_resource type="Script" path="res://button_scripts/ignore_first_char.gd" id="15_ot4g3"]
[ext_resource type="Script" path="res://button_scripts/functions.gd" id="19_5ly0p"]
[ext_resource type="Texture2D" uid="uid://bvjlxishyorn" path="res://assets/system-search-symbolic.svg" id="19_8hrvw"]
[ext_resource type="Script" path="res://button_scripts/variable_tree.gd" id="21_aqxwa"]
[ext_resource type="Script" path="res://button_scripts/insert_function.gd" id="24_jwiw4"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_on5hf"]
number_color = Color(1, 1, 1, 1)
symbol_color = Color(0.823529, 0.0588235, 0.223529, 1)
function_color = Color(0.117647, 0.4, 0.960784, 1)

[sub_resource type="GDScript" id="GDScript_q47po"]
script/source = "extends Button

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	self.pressed.connect(self._button_pressed.bind(self.get_meta(\"node\")))
	pass # Replace with function body.

func _button_pressed(node):
	get_node(node).hide();
"

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="input" type="CodeEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2
theme_override_font_sizes/font_size = 100
virtual_keyboard_enabled = false
wrap_mode = 1
caret_blink = true
caret_blink_interval = 0.5
caret_mid_grapheme = true
caret_multiple = false
syntax_highlighter = SubResource("CodeHighlighter_on5hf")
highlight_all_occurrences = true
auto_brace_completion_highlight_matching = true
script = ExtResource("1_cdgn3")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 150
text = "resultado"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="numbers" type="GridContainer" parent="VBoxContainer/TabContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 5
metadata/_tab_index = 0

[node name="move_left" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
icon = ExtResource("3_rf4oa")
icon_alignment = 1
script = ExtResource("3_1343i")

[node name="move_right" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
icon = ExtResource("5_45h5p")
icon_alignment = 1
script = ExtResource("4_mgs5p")

[node name="left_parenthesis" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "(x)"
script = ExtResource("7_ivjdx")

[node name="exponent" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "x ∏"
script = ExtResource("10_855gx")

[node name="clear" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "C"
script = ExtResource("2_ltflc")

[node name="Button7" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
theme_override_font_sizes/font_size = 0
text = "7"
script = ExtResource("1_totml")

[node name="Button8" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "8"
script = ExtResource("1_totml")

[node name="Button9" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "9"
script = ExtResource("1_totml")

[node name="Divide" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "/"
script = ExtResource("1_totml")

[node name="delete" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
theme_override_font_sizes/font_size = 0
icon = ExtResource("7_t6dja")
icon_alignment = 1
script = ExtResource("3_1veor")

[node name="Button4" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "4"
script = ExtResource("1_totml")

[node name="Button5" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "5"
script = ExtResource("1_totml")

[node name="Button6" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "6"
script = ExtResource("1_totml")

[node name="Multiply" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "*"
script = ExtResource("1_totml")

[node name="answer" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "ans"
script = ExtResource("4_t5poh")

[node name="Button1" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "1"
script = ExtResource("1_totml")

[node name="Button2" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "2"
script = ExtResource("1_totml")

[node name="Button3" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "3"
script = ExtResource("1_totml")

[node name="Minus" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "-"
script = ExtResource("1_totml")

[node name="percent" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "%"
script = ExtResource("1_totml")

[node name="comma" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = ","
script = ExtResource("1_totml")

[node name="Button0" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "0"
script = ExtResource("1_totml")

[node name="Dot" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "."
script = ExtResource("1_totml")

[node name="sum" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "+"
script = ExtResource("1_totml")

[node name="GDExample" type="GDExample" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "="
script = ExtResource("4_qdnla")

[node name="numbers2" type="GridContainer" parent="VBoxContainer/TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
columns = 4
metadata/_tab_index = 1

[node name="move_left2" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
icon = ExtResource("3_rf4oa")
icon_alignment = 1
script = ExtResource("3_1343i")

[node name="move_right2" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
icon = ExtResource("5_45h5p")
icon_alignment = 1
script = ExtResource("4_mgs5p")

[node name="log" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "log‚Çì"
script = ExtResource("15_a7ulm")
metadata/item = "log"
metadata/title = "Base-N Logarithm"

[node name="clear" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "C"
script = ExtResource("2_ltflc")

[node name="factorial" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
theme_override_font_sizes/font_size = 0
text = "x!"
script = ExtResource("15_ot4g3")

[node name="nat_log" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "ln"
script = ExtResource("12_nag7n")

[node name="sqrt" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "‚àö"
script = ExtResource("12_nag7n")

[node name="base_nat_log" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "e"
script = ExtResource("1_totml")

[node name="modulus" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "mod"
script = ExtResource("13_utar4")

[node name="mean" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "xÃÑ"
script = ExtResource("12_nag7n")

[node name="sum5" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "Œ£"
script = ExtResource("15_a7ulm")
metadata/item = "Œ£"
metadata/title = "Summation"

[node name="pi" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "œÄ"
script = ExtResource("1_totml")

[node name="sin" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "sin"
script = ExtResource("12_nag7n")

[node name="cos" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "cos"
script = ExtResource("12_nag7n")

[node name="tan" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "tan"
script = ExtResource("12_nag7n")

[node name="i" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "i"
script = ExtResource("1_totml")

[node name="x" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "x"
script = ExtResource("1_totml")

[node name="y" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "y"
script = ExtResource("1_totml")

[node name="z" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "z"
script = ExtResource("1_totml")

[node name="equality" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "x="
script = ExtResource("15_ot4g3")

[node name="meter" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "m"
script = ExtResource("1_totml")

[node name="kg" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "kg"
script = ExtResource("1_totml")

[node name="dollar" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "$"
script = ExtResource("1_totml")

[node name="conversion" type="Button" parent="VBoxContainer/TabContainer/numbers2"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xbuye")
text = "x‚Üí"
script = ExtResource("15_ot4g3")

[node name="Functions" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/TabContainer/Functions"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
theme_override_icons/clear = ExtResource("7_t6dja")
placeholder_text = "Search:"
clear_button_enabled = true
right_icon = ExtResource("19_8hrvw")

[node name="Functions" type="Tree" parent="VBoxContainer/TabContainer/Functions"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
theme_override_font_sizes/font_size = 70
allow_search = false
hide_root = true
scroll_horizontal_enabled = false
script = ExtResource("19_5ly0p")

[node name="Units" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/TabContainer/Units"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
theme_override_icons/clear = ExtResource("7_t6dja")
placeholder_text = "Search:"
clear_button_enabled = true
right_icon = ExtResource("19_8hrvw")

[node name="Tree" type="Tree" parent="VBoxContainer/TabContainer/Units"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
theme_override_font_sizes/font_size = 70
allow_search = false
hide_root = true
scroll_horizontal_enabled = false
script = ExtResource("15_hi52x")

[node name="Variables" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/TabContainer/Variables"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
theme_override_icons/clear = ExtResource("7_t6dja")
placeholder_text = "Search:"
clear_button_enabled = true
right_icon = ExtResource("19_8hrvw")

[node name="VariableTree" type="Tree" parent="VBoxContainer/TabContainer/Variables"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("1_xbuye")
theme_override_font_sizes/font_size = 70
allow_search = false
hide_root = true
scroll_horizontal_enabled = false
script = ExtResource("21_aqxwa")

[node name="sum_popup2" type="PopupPanel" parent="."]
initial_position = 2
size = Vector2i(858, 655)
theme = ExtResource("15_6v4ak")

[node name="VBoxContainer" type="VBoxContainer" parent="sum_popup2"]
offset_left = 4.0
offset_top = 4.0
offset_right = 854.0
offset_bottom = 651.0

[node name="LineEdit" type="LineEdit" parent="sum_popup2/VBoxContainer"]
layout_mode = 2
placeholder_text = "Search:"
right_icon = ExtResource("19_8hrvw")

[node name="VScrollBar" type="ScrollContainer" parent="sum_popup2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="sum_popup2/VBoxContainer/VScrollBar"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
allow_search = false
hide_root = true
scroll_horizontal_enabled = false

[node name="cancel" type="Button" parent="sum_popup2/VBoxContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"
script = SubResource("GDScript_q47po")
metadata/node = NodePath("../..")

[node name="fn_popup" type="PopupPanel" parent="."]
auto_translate_mode = 1
initial_position = 2
size = Vector2i(858, 655)
theme = ExtResource("15_6v4ak")

[node name="ScrollContainer" type="ScrollContainer" parent="fn_popup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 854.0
offset_bottom = 651.0
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="fn_popup/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="fn_popup/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Function"
clip_text = true
metadata/metadata = ""

[node name="HSeparator" type="HSeparator" parent="fn_popup/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="VBoxContainer" parent="fn_popup/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="fn_popup/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="cancel" type="Button" parent="fn_popup/ScrollContainer/VBoxContainer/GridContainer/HBoxContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"
script = SubResource("GDScript_q47po")
metadata/node = NodePath("../../../../..")

[node name="insert" type="Button" parent="fn_popup/ScrollContainer/VBoxContainer/GridContainer/HBoxContainer"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
text = "Insert
"
script = ExtResource("24_jwiw4")

[connection signal="text_changed" from="VBoxContainer/TabContainer/Functions/LineEdit" to="VBoxContainer/TabContainer/Functions/Functions" method="_on_line_edit_text_changed"]
[connection signal="item_activated" from="VBoxContainer/TabContainer/Functions/Functions" to="VBoxContainer/TabContainer/Functions/Functions" method="_on_item_activated"]
[connection signal="text_changed" from="VBoxContainer/TabContainer/Units/LineEdit" to="VBoxContainer/TabContainer/Units/Tree" method="_on_line_edit_text_changed"]
[connection signal="item_activated" from="VBoxContainer/TabContainer/Units/Tree" to="VBoxContainer/input" method="_on_tree_item_activated"]
[connection signal="text_changed" from="VBoxContainer/TabContainer/Variables/LineEdit" to="VBoxContainer/TabContainer/Variables/VariableTree" method="_on_line_edit_text_changed"]
[connection signal="item_activated" from="VBoxContainer/TabContainer/Variables/VariableTree" to="VBoxContainer/input" method="_on_variable_tree_item_activated"]
[connection signal="text_changed" from="sum_popup2/VBoxContainer/LineEdit" to="VBoxContainer/TabContainer/numbers2/meter" method="_on_line_edit_text_changed"]
[connection signal="item_activated" from="sum_popup2/VBoxContainer/VScrollBar/Tree" to="VBoxContainer/input" method="_on_tree_item_activated"]
